objects/PRCGModelSecurity__c.object
<CustomObject>
    <fields>
        <fullName>ModelSecurityIdUrl__c</fullName>
        <formula>HYPERLINK('/'&amp; Id,  ModelSecurityId__c , '_self')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Security Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelSecurityId__c</fullName>
        <description>Artemus.request_portf.request_portf_id
numeric(38,0)</description>
        <externalId>true</externalId>
        <label>Model Security Id</label>
        <length>38</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Security__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Security</label>
        <referenceTo>Security__c</referenceTo>
        <relationshipName>RequestPortfoliosSecurity</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Artemus.request_portf.weight
numeric(18,3)</description>
        <label>Weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRCGRequestModel__c</fullName>
        <label>PRCG Request Model</label>
        <referenceTo>PRCGRequestModel__c</referenceTo>
        <relationshipLabel>PRCG Model Securities</relationshipLabel>
        <relationshipName>PRCGModelSecurities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>PRCG Model Security</label>
    <nameField>
        <displayFormat>PMS-{0000000000}</displayFormat>
        <label>Request Portfolio Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRCG Model Securities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>MonthlyModelSecurities</fullName>
        <columns>PRCGRequestModel__c</columns>
        <columns>Security__c</columns>
        <columns>Weight__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month's Security Models</label>
    </listViews>
</CustomObject>